--- a/Mono Test/Mono Test.csproj
+++ b/Mono Test/Mono Test.csproj
@@ -43,6 +43,7 @@
     <Compile Include="global.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Render.cs" />
     <Compile Include="UI.cs" />
   </ItemGroup>
   <ItemGroup>
