--- a/Mono Test/Mono Test.csproj
+++ b/Mono Test/Mono Test.csproj
@@ -38,6 +38,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Collision.cs" />
     <Compile Include="Controls.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="global.cs" />
