--- a/Mono Test/Mono Test.csproj
+++ b/Mono Test/Mono Test.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Controls.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="global.cs" />
+    <Compile Include="Input.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Render.cs" />
